adjusting span styling to avoid wrapping
Removed margin/padding stles - unnecessary.

--- a/main.css
+++ b/main.css
@@ -185,8 +185,6 @@ main {
 
 .avoidwrap {
   display: inline-block;
-  margin: 0;
-  padding: 0;
 }
 
 
